--- a/static/spot_style.css
+++ b/static/spot_style.css
@@ -11,11 +11,8 @@ html, body {
 body {
   width: 100%;
   color:#fff;   
-   background-image: linear-gradient(180deg,#0000002b,#0000009c,#000000a6,#000000c2), url(/static/carimage7.jpg);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  /* backdrop-filter: blur(5.5px); */
+  
+  background-color: #444861;
   align-items: center;
   display: flex;
   overflow:auto;
