--- a/static/style.css
+++ b/static/style.css
@@ -129,7 +129,9 @@ list-style: none;
     height: 500px;
 }
 
-
+*, ::after, ::before {
+    box-sizing: revert-layer;
+}
 .main {
     width: 90%;
     /* height: 60%; */
@@ -154,6 +156,16 @@ list-style: none;
   border-radius:20px;
   /* border:4px solid #ccc; */
   padding: 10%; /* Adjust padding as needed using em units */  
+}
+.date-pic{
+  width:6rem;
+}
+.time-pic{
+  width:3rem;
+}
+.date-time-row{
+  display:flex;
+  justify-content: space-between;
 }
 
 #yearSelector {
