--- a/templates/index.html
+++ b/templates/index.html
@@ -160,8 +160,8 @@
             <div class="add-event-row ">
             <label for="mb">Date and Time</label>
               <div class="date-time-row">
-            <input type="text" id="datepicker" name="datepicker" class="add-con date-pic " placeholder="Date" readonly>
-            <input type="text" id="timepicker" name=timepicker class="add-con time-pic" placeholder="Time" readonly>
+            <input type="date" id="datepicker" name="datepicker" class="add-con date-pic " placeholder="Date" readonly>
+            <input type="time"  name="timepicker" class="add-con time-pic" placeholder="Time" >
               </div>
             </div>
         <!-- Select Model Dropdown -->
