--- a/static/spot_style.css
+++ b/static/spot_style.css
@@ -22,7 +22,47 @@ body::-webkit-scrollbar {
   width: 0px;
 
 }
+.checklist-container {
+    background: transparent;
+    margin: 10px;
+    padding: 9px;
+    width: 258px;
+    height: 165px;
+    border-radius: 10px;
+    color: floralwhite;
+    font-size: 20px;
+    transition: all 0.3s ease;
+    border: 3px solid #ecd018;
+}
 
+/* Style the heading */
+.checklist-heading {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  color:#000;
+  padding:10px;
+  background-color:#bdbcb2;
+}
+
+/* Style the checklist logo */
+.checklist-logo {
+  color: green; /* You can change the color as needed */
+}
+
+/* Style the checkboxes and their labels */
+.checkbox-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 8px;
+    justify-content: space-between;
+}
+.checkbox-label {
+  margin-left: 8px;
+}
 body::-webkit-scrollbar-thumb {
   background-color:#0000;
 ; /* Thumb color */
@@ -66,6 +106,7 @@ body::-webkit-scrollbar-thumb {
 
 .button-container {
     display: flex;
+  flex-direction:column;
     justify-content: center;
     align-items: center;
     margin: 20px 10px;
@@ -74,9 +115,10 @@ body::-webkit-scrollbar-thumb {
 .button-container button {
     background: transparent;
     margin: 10px;
-    margin-bottom: 50px;
-    width: 198px;
-    height: 114px;
+    padding: 0px;
+    /* margin-bottom: 50px; */
+    width: 285px;
+    height: 187px;
     border-radius: 10px;
     color: floralwhite;
     font-size: 20px;
@@ -89,8 +131,21 @@ body::-webkit-scrollbar-thumb {
   color:#ecd018;
 
 }
-
-
+.btn-con{
+  display:flex;
+}
+#show-btn,#key-btn{
+background-color:#0a0804;
+}
+.checkbox-container:hover{
+  border:3px solid #fff;
+  background:transparent;
+  color:#ecd018;
+}
+#content-text{
+  display:none;
+  
+}
 @media only screen and (max-width: 980px) {
   
   
@@ -118,21 +173,23 @@ body::-webkit-scrollbar-thumb {
     width: 100%;
   }
 
-  .button-container {
-    margin: 3vw;
-    display: flex;
-    gap: 1rem;
-    justify-content: center;
+  
+  .btn-con{
+    display:flex;
+    flex-direction:column;
   }
 }
-#myVideo {
-  position: absolute;
-  width: 197px;
-  height: 108px;
-  padding: 0px;
-  margin: -53px;
-  margin-left: -99px;
-  border-radius: 16px;
+.cls-myVideo {
+    /* position: absolute; */
+    width: 100%;
+    height: 100%;
+    /* padding: 0px; */
+    /* margin: -87px; */
+    /* margin-left: -99px; */
+    border-radius: 16px;
+}
+#show-video,#key-video{
+  display:none;
 }
 .mic{
   position:fixed;
