--- a/static/spot_style.css
+++ b/static/spot_style.css
@@ -114,6 +114,8 @@ body::-webkit-scrollbar-thumb {
 
 .button-container button {
     background: transparent;
+    display: flex;
+    justify-content: center;
     margin: 10px;
     padding: 0px;
     /* margin-bottom: 50px; */
@@ -124,6 +126,8 @@ body::-webkit-scrollbar-thumb {
     font-size: 20px;
     transition: all 0.3s ease;
     border: 3px solid #ecd018;
+    flex-wrap: wrap;
+  align-content: center;
 }
 .button-container button:hover{
   border:3px solid #fff;
@@ -183,16 +187,24 @@ background-color:#0a0804;
     /* position: absolute; */
     width: 100%;
     height: 100%;
+    
     /* padding: 0px; */
     /* margin: -87px; */
     /* margin-left: -99px; */
     border-radius: 16px;
 }
-#show-video,#key-video{
-  display:none;
-}
+
 .mic{
   position:fixed;
   bottom:2vh;
   right:2vh;
 }
+.startshow-btn-cap ,.keyreveal-btn-cap {
+    z-index: 2;
+    margin:5vh;
+    position: absolute;
+}
+
+
+
+
