--- a/templates/spot_reveal.html
+++ b/templates/spot_reveal.html
@@ -65,7 +65,10 @@
               </video>
             </button>
 
-            <button>End Show</button>
+            <button>
+              <div class="endshow-btn-cap" id="endshow-btn-cap">End Show</div>
+             <img src="static/endshow.jpg" alt="" class="endshow-image ">
+            </button>
           </div>
         </div>
 
