--- a/templates/index.html
+++ b/templates/index.html
@@ -114,100 +114,14 @@
       <div class="edit" onclick="edit_handler(this.parentElement.id,event)">
         <i class="fas fa-edit"></i>Edit
       </div>
-      <div class="delete">
+      <div class="delete" onclick="delete_handler(this.parentElement.id,event)">
         <i class="fa-solid fa-trash "></i>Delete
       </div>
     </div>
 
     <div class="add-event-form">
-    <form   id="new-app">
-      <div class="add-event-container">
-        <div class="close-btn" onclick="close_handler()">
-          <i class="fa-solid fa-xmark fa-2xl" style="color: #f7f7f7;"></i>
-        </div>
-        <div class="event-info">
-          <div class="event-info-1">
-            
-        <!-- Name -->
-        <div class="add-event-row add-event-name">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" class="add-con" placeholder="Name" required>
-        </div>
-        <!-- Email -->
-        <div class="add-event-row">
-        <label for="email">Email ID:</label>
-        <input type="email" id="email" class="add-con" name="email" placeholder="abcd@gmail.com"required>
-        </div>
-        <!-- Mobile Number -->
-        <div class="add-event-row">
-        <label for="mobile">Mobile Number:</label>
-        <input type="tel" id="mobile" name="mobile" class="add-con"placeholder="Phone Number" required>
-        </div>
-          
-          
-        <!-- MB Dropdown -->
-        <div class="add-event-row">
-        <label for="mb">MB:</label>
-        <select id="mb" name="mb" class="add-con">
-          <option value="" disabled selected>Select an option</option>
-          <option value="AMG">AMG</option>
-          <option value="EQ">EQ</option>
-         
-
-        </select>
-        </div>
-          </div>
-          <div class="event-info-2">
-            <div class="add-event-row ">
-            <label for="mb">Date and Time</label>
-              <div class="date-time-row">
-            <input type="date" id="datepicker" name="datepicker" class="add-con date-pic " placeholder="Date" required readonly>
-            <input type="time"  id="time-picker" name="timepicker" class="add-con time-pic" placeholder="Time" required >
-              </div>
-            </div>
-        <!-- Select Model Dropdown -->
-        <div class="add-event-row">
-        <label for="model">Model:</label>
-        <select id="model" name="model" class="add-con">
-          <option value="" disabled selected>Select an option</option>
-            <option value="A-class">A Class</option>
-            <option value="C-class">C Class</option>
-            <option value="EQ1">EQ1</option>
-          <option value="EQ2">EQ2</option>
-
-          </select>
-        </div>
-        <!-- Product Expert Dropdown -->
-        <div class="add-event-row">
-        <label for="expert">Product Expert:</label>
-        <select id="expert" name="expert" class="add-con">
-          <option value="" disabled selected>Select an option</option>
-            <option value="Product Expert 1">Product Expert 1</option>
-            <option value="Product Expert 2">Product Expert 2</option>
-            <option value="Product Expert 3">Product Expert 3</option>
-          </select>
-        
-        </div>
-        <!-- Select Room Dropdown -->
-        <div class="add-event-row">
-        <label for="room">Delivery Area:</label>
-        <select id="room" name="room" class="add-con">
-          <option value="" disabled selected>Select an option</option>
-            <option value="Area 1">Area 1</option>
-            <option value="Area 2">Area 2</option>
-            <option value="Area 3">Area 3</option>
-          </select>
    
-        </div>
-        </div>
-        </div>
-        <!-- Save Button -->
-        <div class="add-event-row button-div">
-        <button class="save-btn" id="app-save" type="submit">Save</button>
-          </div>
-      </div>
-    </form>
-
+      
     </div>
             <div class="ai-buttons mic">
               <button id="yesButton">ON</button>
@@ -221,7 +135,7 @@
             <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-timepicker/0.5.2/js/bootstrap-timepicker.min.js"></script>
 
     <script src="/static/cal.js"></script>
-    <script src="/static/script.js"></script> 
+    
             
 
   </body> 
