updated is enable-disable button,add ai to spotreveal and month selection through ai

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="/static/rome.css">
     <link rel="stylesheet" href="/static/style.css">
-    <link rel="stylesheet" href="/static/aibutton.css">
+    <!-- <link rel="stylesheet" href="/static/aibutton.css"> -->
 
  </head>
 
@@ -123,9 +123,9 @@
    
       
     </div>
-            <div class="ai-buttons mic">
-              <button id="yesButton">ON</button>
-              <button id="noButton" class="active">OFF</button>
+            <div class="mic">
+              <button id="yesButton"><img src="static/aienable.jpeg" style="" alt="AI Enable"></button>
+              <button id="noButton" class="active"><img src="static/aidisable.jpeg" style="" alt="AI Enable"></button>
             </div>
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
