--- a/static/spot_style.css
+++ b/static/spot_style.css
@@ -199,6 +199,8 @@ background-color:#0a0804;
   position:fixed;
   bottom:2vh;
   right:2vh;
+  width:11vh;
+  padding:0px;
 }
 .startshow-btn-cap ,.keyreveal-btn-cap,.endshow-btn-cap {
     z-index: 2;
@@ -211,6 +213,33 @@ background-color:#0a0804;
   display: block;  /* Remove extra space below the image */
   margin: auto;
 }
+#noButton{
+  display:none;
+}
+.mic img {
+    width: 100%; /* Make the image fill the entire button */
+    height: auto; /* Maintain the aspect ratio of the image */
+    display: block; /* Remove extra spacing beneath the image */
+}
+#disable-checklist{
+  display:none;
+      margin-left: 15px;
+      /* border: 2px solid #04eb97; */
+      color: #fbfffe;
+      background-color: #06fa1b;
+      padding: 2px 9px;
+      border-radius: 3px;
+      box-shadow: 0px 0px 8px 1.5px #06fa1b;
+      cursor:pointer;
+}
+#enable-checklist {
+    margin-left: 15px;
+    /* border: 2px solid #04eb97; */
+    color: #fbfffe;
+    background-color: #06fa1b;
+    padding: 2px 9px;
+    border-radius: 3px;
+    box-shadow: 0px 0px 8px 1.5px #06fa1b;
+  cursor:pointer;
 
-
-
+}
