--- a/static/style.css
+++ b/static/style.css
@@ -439,6 +439,8 @@ label{
   position:fixed;
   bottom:2vh;
   right:2vh;
+  width:11vh;
+  padding:0px;
 }
 .close-btn{
   width:2vh;
@@ -564,4 +566,34 @@ label{
 .add-event,.time-container,.ev-container,.rd-container{
   /* background-color:#6c6d6630; */
   border:1px solid #000000;
+}
+#noButton{
+  display:none;
+}
+.mic img {
+    width: 100%; /* Make the image fill the entire button */
+    height: auto; /* Maintain the aspect ratio of the image */
+    display: block; /* Remove extra spacing beneath the image */
+}
+#disable-checklist{
+  display:none;
+      margin-left: 15px;
+      /* border: 2px solid #04eb97; */
+      color: #fbfffe;
+      background-color: #06fa1b;
+      padding: 2px 9px;
+      border-radius: 3px;
+      box-shadow: 0px 0px 8px 1.5px #06fa1b;
+      cursor:pointer;
+}
+#enable-checklist {
+    margin-left: 15px;
+    /* border: 2px solid #04eb97; */
+    color: #fbfffe;
+    background-color: #06fa1b;
+    padding: 2px 9px;
+    border-radius: 3px;
+    box-shadow: 0px 0px 8px 1.5px #06fa1b;
+  cursor:pointer;
+
 }
