--- a/templates/edit.html
+++ b/templates/edit.html
@@ -77,6 +77,10 @@
         </div>
         <!-- Save Button -->
         <div class="add-event-row button-div">
+          <div class="message-div"> 
+            <label for="room">Message:</label>
+            <input type="text" id="message" class="add-con" name="message"   value="{{ data.message }}">
+          </div>
             <button class="save-btn" id="app-update" type="submit" >Save</button>
         </div>
     </div>
