--- a/templates/spot_reveal.html
+++ b/templates/spot_reveal.html
@@ -30,9 +30,10 @@
               </div>
 
               <!-- Checkboxes with text -->
-              <div class="checkbox-container">
+              <div class="checkbox-container" onclick="lightcheck()">
                 <label class="checkbox-label" for="checkbox1">Light Check</label>
-                <input type="checkbox" id="lightcheck" onclick="lightcheck()">
+                <i class="fa-solid fa-clipboard-check fa-xl" style="color: #000;"></i>
+                <input type="checkbox" id="lightcheck" >
               </div>
 
               <div class="checkbox-container">
