select month and year

--- a/static/spot_style.css
+++ b/static/spot_style.css
@@ -24,7 +24,7 @@ body::-webkit-scrollbar {
 }
 .home-button {
     bottom: 19px;
-    position: absolute;
+    position: fixed;
     left: 24px;
     font-size: xx-large;
     cursor: pointer;
