--- a/static/spot_style.css
+++ b/static/spot_style.css
@@ -217,7 +217,7 @@ background-color:#0a0804;
 }
 .startshow-btn-cap ,.keyreveal-btn-cap,.endshow-btn-cap {
     z-index: 2;
-    margin:5vh;
+    margin:2rem;
     position: absolute;
 }
 .endshow-image{
